# mcp-print

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/print-workflow/: SKILL.md
.github/workflows/: ci.yml
scripts/: generate_pantone_db.py
src/mcp_print/: __init__.py  __main__.py  server.py
src/mcp_print/data/: pantone_colors.json
src/mcp_print/tools/: __init__.py  barcode.py  colors.py  cost.py  icc.py  ink.py  paper.py  preflight.py  spot.py  substrate.py
tests/: test_barcode.py  test_colors.py  test_cost.py  test_icc.py  test_ink.py  test_paper.py  test_preflight.py  test_spot.py  test_substrate.py
